# ESP32_System

./: CMakeLists.txt  ESP32_System.cpp  Kconfig.projbuild  README.md  library.json  library.properties  sdkconfig.defaults
Extensions/: CMakeLists.txt_bac  IO.cpp  IO.h  Kconfig.Modbus  Kconfig.WiFi  Makefile_bac  ModbusTCP.cpp  ModbusUART.cpp  Network.cpp  WiFi.cpp  WiFi.h  stdin_out.cpp
Extensions/Include/: ModbusTCP.h  ModbusUART.h  Network.h
Extensions/Network/: Host.cpp  Host.h
Extensions/Network/Protocols/: DNS.cpp  DNS.h  Ethernet.cpp  Ethernet.h  IPv4.cpp  IPv4.h
Extensions/Network/wifi/: WiFi.cpp  WiFi.h  WiFiGeneric.cpp  WiFiGeneric.h
Extensions/Network/wifi/SRC/WiFi/: WiFiSTA.cpp  WiFiSTA.h
Extensions/modbus/mb_common/: modbus_params.c
include/: ESP32_System.h
